<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent" android:layout_width="match_parent"
	android:paddingLeft="10dp" android:paddingRight="10dp"
	android:orientation="vertical" android:background="#FFFFFF">
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:orientation="horizontal">
		<TextView android:layout_height="match_parent" android:text="Status"
			android:textColor="#336699" android:layout_width="match_parent"
			android:gravity="center_vertical" />
		<ImageView android:id="@+id/psirtdetail_statusIcon"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_toLeftOf="@+id/PSIRTtitle" android:src="@drawable/error"
			android:padding="5dp" />
		<TextView android:id="@+id/psirtdetail_status"
			android:textColor="#000000" android:layout_height="match_parent"
			android:layout_width="wrap_content" android:gravity="center_vertical"
			android:text="Unresolved" />
	</LinearLayout>
	<TextView android:id="@+id/psirtdetail_headline"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:textColor="#336699" android:text="Psirt Headline"
		android:textSize="20dp" android:paddingBottom="10dp" />
	<TableLayout android:layout_height="wrap_content"
		android:layout_width="match_parent">
		<TableRow android:layout_height="wrap_content"
			android:layout_width="match_parent" android:paddingBottom="5dp">
			<TextView android:id="@+id/psirtdetail_id_title"
				android:textColor="#336699" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/psirtdetail_id"
				android:gravity="right" android:paddingRight="5dp" />
			<TextView android:id="@+id/psirtdetail_id"
				android:layout_width="wrap_content" android:layout_marginRight="15sp"
				android:textColor="#000000" android:layout_height="wrap_content"
				android:text="TESTID1234" />
		</TableRow>
		<TableRow android:layout_height="wrap_content"
			android:layout_width="match_parent" android:paddingBottom="5dp">
			<TextView android:id="@+id/psirtdetail_firstpublished_title"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:textColor="#336699" android:text="@string/psirtdetail_firstpublished"
				android:gravity="right" android:paddingRight="5dp" />
			<TextView android:layout_height="wrap_content" android:layout_marginRight="15sp" android:textColor="#000000" android:text="Test Date" android:layout_width="wrap_content" android:id="@+id/psirtdetail_firstpublished"></TextView>
		</TableRow>
		<TableRow android:layout_height="wrap_content"
			android:layout_width="match_parent" android:paddingBottom="5dp">
			<TextView android:id="@+id/psirtdetail_lastupdated_title"
				android:textColor="#336699" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/psirtdetail_lastupdated"
				android:gravity="right" android:paddingRight="5dp" />
			<TextView android:id="@+id/psirtdetail_lastupdated"
				android:layout_width="wrap_content" android:textColor="#000000"
				android:layout_marginRight="15sp"
				android:layout_height="wrap_content" />
		</TableRow>
		<TableRow android:layout_height="wrap_content"
			android:layout_width="match_parent" android:paddingBottom="5dp">
			<TextView android:layout_height="wrap_content" android:text="Date Received"
				android:textColor="#336699" android:layout_width="wrap_content" />
			<TextView android:id="@+id/psirtdetail_datereceived"
				android:layout_width="wrap_content" android:textColor="#000000"
				android:layout_height="wrap_content" android:text="Test Date" />
		</TableRow>
	</TableLayout>
	<TextView android:id="@+id/psirtdetail_impacttitle"
		android:textColor="#336699" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_marginTop="5px"
		android:textSize="20sp" android:text="Impact"
		android:paddingBottom="5dp" />
	<TextView android:id="@+id/psirtdetail_impact"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:textColor="#000000" android:textSize="12sp"
		android:paddingBottom="8dp" />
	<Button android:layout_width="wrap_content"
		android:text="@string/psirtdetail_externalurl_button"
		android:layout_height="wrap_content" android:id="@+id/psirtdetail_externalurl_button" />
	<Button android:layout_width="wrap_content" android:text="@string/psirtdetail_email_button"
		android:layout_height="wrap_content" android:id="@+id/psirtdetail_email_button" />
</LinearLayout>

